(fix) Modify caption positions to show better on mobile

--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ section img {
   font-family: "Zilla Slab Highlight", "Trebuchet MS";
   font-size: 1.2em;
   z-index: 0;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .avenida {
@@ -258,6 +259,15 @@ section img {
   color: var(--color-strong);
   text-align: center;
   vertical-align: middle;
+}
+
+@media (max-width: 768px) {
+  .caption {
+    font-size: 1em;
+  }
+  .avenida {
+    font-size: 0.8em;
+  }
 }
 
 /*
